syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.proto.team";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

package team;

service TeamHandler {
    rpc createTeam(CreateTeamRequest) returns (TeamResponse);
    rpc getTeam(common.IdRequest) returns (TeamResponse);
    rpc getTeams(common.IdsRequest) returns (TeamListResponse);
}

message CreateTeamRequest{
    string name = 1;
    string requestedBy = 2;
}

message TeamResponse {
    int64 id = 1;
    string name = 2;
    string registeredBy = 3;
    google.protobuf.Timestamp registeredDate = 4;
    string modifiedBy = 5;
    google.protobuf.Timestamp modifiedDate = 6;
}

message TeamListResponse {
    repeated TeamResponse team = 1;
}
